--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/img/backgroundimg.png);
+    background-image: url("/img/backgroundimg.png");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
